# Resume-Ranking-and-Classification

./: README.md  classifier.ipynb  new.csv  pyproject.toml  rankings.ipynb
src/: preprocessing.py  ranker.py  train_evaluate.py
