[tool.poetry]
name = "rankings"
version = "0.1.0"
description = ""
authors = ["ahmad99tahir <a99tahir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
nltk = "^3.8.1"
wordcloud = "^1.9.3"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
pypdf2 = "^3.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
